--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,14 @@
   <groupId>Test</groupId>
   <artifactId>Githubwithmaven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+            <source>1.6</source>
+            <target>1.6</target>
+        </configuration>
+  </plugin>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
