--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,10 @@
   <groupId>Test</groupId>
   <artifactId>Githubwithmaven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
-        </configuration>
-  </plugin>
+<properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
